--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,3 +41,5 @@ FIND_PACKAGE(ZLIB REQUIRED)
 target_link_libraries(ray ${ZLIB_LIBRARIES})
 SET_PROPERTY(TARGET ray APPEND PROPERTY INCLUDE_DIRECTORIES ${ZLIB_INCLUDE_DIR})
 target_link_libraries(ray ${OPENGL_glu_LIBRARY})
+FIND_PACKAGE(OpenMP)
+target_link_libraries(ray OpenMP::OpenMP_CXX)
